thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLVector3 {
    float x;                
    float y;                
    float z;                
} RLVector3;
typedef struct RLMatrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} RLMatrix;
typedef struct RLTexture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLTexture;
typedef RLTexture RLTexture2D;
typedef struct RLCamera2D {
    RLVector2 offset;         
    RLVector2 target;         
    float rotation;         
    float zoom;             
} RLCamera2D;
typedef struct RLMesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    RLMatrix *boneMatrices;   
    int boneCount;          
    unsigned int vaoId;     
    unsigned int *vboId;    
} RLMesh;
typedef struct RLShader {
    unsigned int id;        
    int *locs;              
} RLShader;
typedef struct RLMaterialMap {
    RLTexture2D texture;      
    RLColor color;            
    float value;            
} RLMaterialMap;
typedef struct RLMaterial {
    RLShader shader;          
    RLMaterialMap *maps;      
    float params[4];        
} RLMaterial;
typedef struct RLTransform {
    RLVector3 translation;    
    RLQuaternion rotation;    
    RLVector3 scale;          
} RLTransform;
typedef struct RLBoneInfo {
    char name[32];          
    int parent;             
} RLBoneInfo;
typedef struct RLModel {
    RLMatrix transform;       
    int meshCount;          
    int materialCount;      
    RLMesh *meshes;           
    RLMaterial *materials;    
    int *meshMaterial;      
    int boneCount;          
    RLBoneInfo *bones;        
    RLTransform *bindPose;    
} RLModel;
typedef struct RLModelAnimation {
    int boneCount;          
    int frameCount;         
    RLBoneInfo *bones;        
    RLTransform **framePoses; 
    char name[32];          
} RLModelAnimation;
typedef struct RLRay {
    RLVector3 position;       
    RLVector3 direction;      
} RLRay;
typedef struct RLRayCollision {
    bool hit;               
    float distance;         
    RLVector3 point;          
    RLVector3 normal;         
} RLRayCollision;
typedef struct RLBoundingBox {
    RLVector3 min;            
    RLVector3 max;            
} RLBoundingBox;
typedef struct RLWave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} RLWave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct rAudioProcessor rAudioProcessor;
typedef struct RLAudioStream {
    rAudioBuffer *buffer;       
    rAudioProcessor *processor; 
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} RLAudioStream;
typedef struct RLSound {
    RLAudioStream stream;         
    unsigned int frameCount;    
} RLSound;
typedef struct RLMusic {
    RLAudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} RLMusic;
typedef enum {
    MATERIAL_MAP_ALBEDO = 0,        
    MATERIAL_MAP_METALNESS,         
    MATERIAL_MAP_NORMAL,            
    MATERIAL_MAP_ROUGHNESS,         
    MATERIAL_MAP_OCCLUSION,         
    MATERIAL_MAP_EMISSION,          
    MATERIAL_MAP_HEIGHT,            
    MATERIAL_MAP_CUBEMAP,           
    MATERIAL_MAP_IRRADIANCE,        
    MATERIAL_MAP_PREFILTER,         
    MATERIAL_MAP_BRDF               
} MaterialMapIndex;
#define MATERIAL_MAP_DIFFUSE      MATERIAL_MAP_ALBEDO
#define MATERIAL_MAP_SPECULAR     MATERIAL_MAP_METALNESS
RLAPI RLMaterial *LoadMaterials(const char *fileName, int *materialCount);                    
RLAPI RLMaterial LoadMaterialDefault(void);                                                   
RLAPI bool IsMaterialValid(RLMaterial material);                                              
RLAPI void UnloadMaterial(RLMaterial material);                                               
RLAPI void SetMaterialTexture(RLMaterial *material, int mapType, RLTexture2D texture);          
RLAPI void SetModelMeshMaterial(RLModel *model, int meshId, int materialId);                  
RLAPI RLModelAnimation *LoadModelAnimations(const char *fileName, int *animCount);            
RLAPI void UpdateModelAnimation(RLModel model, RLModelAnimation anim, int frame);               
RLAPI void UpdateModelAnimationBones(RLModel model, RLModelAnimation anim, int frame);          
RLAPI void UnloadModelAnimation(RLModelAnimation anim);                                       
RLAPI void UnloadModelAnimations(RLModelAnimation *animations, int animCount);                
RLAPI bool IsModelAnimationValid(RLModel model, RLModelAnimation anim);                         
RLAPI bool CheckCollisionSpheres(RLVector3 center1, float radius1, RLVector3 center2, float radius2);   
RLAPI bool CheckCollisionBoxes(RLBoundingBox box1, RLBoundingBox box2);                                 
RLAPI bool CheckCollisionBoxSphere(RLBoundingBox box, RLVector3 center, float radius);                  
RLAPI RLRayCollision GetRayCollisionSphere(RLRay ray, RLVector3 center, float radius);                    
RLAPI RLRayCollision GetRayCollisionBox(RLRay ray, RLBoundingBox box);                                    
RLAPI RLRayCollision GetRayCollisionMesh(RLRay ray, RLMesh mesh, RLMatrix transform);                       
RLAPI RLRayCollision GetRayCollisionTriangle(RLRay ray, RLVector3 p1, RLVector3 p2, RLVector3 p3);            
RLAPI RLRayCollision GetRayCollisionQuad(RLRay ray, RLVector3 p1, RLVector3 p2, RLVector3 p3, RLVector3 p4);    
typedef void (*AudioCallback)(void *bufferData, unsigned int frames);
RLAPI void InitAudioDevice(void);                                     
RLAPI void CloseAudioDevice(void);                                    
RLAPI bool IsAudioDeviceReady(void);                                  
RLAPI void SetMasterVolume(float volume);                             
RLAPI float GetMasterVolume(void);                                    
RLAPI RLWave LoadWave(const char *fileName);                            
RLAPI RLWave LoadWaveFromMemory(const char *fileType, const unsigned char *fileData, int dataSize); 
RLAPI bool IsWaveValid(RLWave wave);                                    
RLAPI RLSound LoadSound(const char *fileName);                          
RLAPI RLSound LoadSoundFromWave(RLWave wave);                             
RLAPI RLSound LoadSoundAlias(RLSound source);                             
RLAPI bool IsSoundValid(RLSound sound);                                 
RLAPI void UpdateSound(RLSound sound, const void *data, int sampleCount); 
RLAPI void UnloadWave(RLWave wave);                                     
RLAPI void UnloadSound(RLSound sound);                                  
RLAPI bool ExportWave(RLWave wave, const char *fileName);               
RLAPI bool ExportWaveAsCode(RLWave wave, const char *fileName);         
RLAPI void PlaySound(RLSound sound);                                    
RLAPI void StopSound(RLSound sound);                                    
RLAPI void PauseSound(RLSound sound);                                   
RLAPI void ResumeSound(RLSound sound);                                  
RLAPI bool IsSoundPlaying(RLSound sound);                               
RLAPI void SetSoundVolume(RLSound sound, float volume);                 
RLAPI void SetSoundPitch(RLSound sound, float pitch);                   
RLAPI void SetSoundPan(RLSound sound, float pan);                       
RLAPI RLWave WaveCopy(RLWave wave);                                       
RLAPI void WaveCrop(RLWave *wave, int initFrame, int finalFrame);       
RLAPI void WaveFormat(RLWave *wave, int sampleRate, int sampleSize, int channels); 
RLAPI float *LoadWaveSamples(RLWave wave);                              
RLAPI void UnloadWaveSamples(float *samples);                         
RLAPI RLMusic LoadMusicStream(const char *fileName);                    
RLAPI RLMusic LoadMusicStreamFromMemory(const char *fileType, const unsigned char *data, int dataSize); 
RLAPI bool IsMusicValid(RLMusic music);                                 
RLAPI void UnloadMusicStream(RLMusic music);                            
RLAPI void PlayMusicStream(RLMusic music);                              
RLAPI bool IsMusicStreamPlaying(RLMusic music);                         
RLAPI void UpdateMusicStream(RLMusic music);                            
RLAPI void StopMusicStream(RLMusic music);                              
RLAPI void PauseMusicStream(RLMusic music);                             
RLAPI void ResumeMusicStream(RLMusic music);                            
RLAPI void SeekMusicStream(RLMusic music, float position);              
RLAPI void SetMusicVolume(RLMusic music, float volume);                 
RLAPI void SetMusicPitch(RLMusic music, float pitch);                   
RLAPI void SetMusicPan(RLMusic music, float pan);                       
RLAPI float GetMusicTimeLength(RLMusic music);                          
RLAPI float GetMusicTimePlayed(RLMusic music);                          
RLAPI RLAudioStream LoadAudioStream(unsigned int sampleRate, unsigned int sampleSize, unsigned int channels); 
RLAPI bool IsAudioStreamValid(RLAudioStream stream);                    
RLAPI void UnloadAudioStream(RLAudioStream stream);                     
RLAPI void UpdateAudioStream(RLAudioStream stream, const void *data, int frameCount); 
RLAPI bool IsAudioStreamProcessed(RLAudioStream stream);                
RLAPI void PlayAudioStream(RLAudioStream stream);                       
RLAPI void PauseAudioStream(RLAudioStream stream);                      
RLAPI void ResumeAudioStream(RLAudioStream stream);                     
RLAPI bool IsAudioStreamPlaying(RLAudioStream stream);                  
RLAPI void StopAudioStream(RLAudioStream stream);                       
RLAPI void SetAudioStreamVolume(RLAudioStream stream, float volume);    
RLAPI void SetAudioStreamPitch(RLAudioStream stream, float pitch);      
RLAPI void SetAudioStreamPan(RLAudioStream stream, float pan);          
RLAPI void SetAudioStreamBufferSizeDefault(int size);                 
RLAPI void SetAudioStreamCallback(RLAudioStream stream, AudioCallback callback); 
RLAPI void AttachAudioStreamProcessor(RLAudioStream stream, AudioCallback processor); 
RLAPI void DetachAudioStreamProcessor(RLAudioStream stream, AudioCallback processor); 
RLAPI void AttachAudioMixedProcessor(AudioCallback processor); 
RLAPI void DetachAudioMixedProcessor(AudioCallback processor); 