engine/thirdparty/raylib55.c3i


// RLMaterial loading/unloading functions
// Load materials from model file
fn RLMaterial* loadMaterials(ZString fileName, CInt* materialCount) @cname("LoadMaterials");
// Load default material (Supports: DIFFUSE, SPECULAR, NORMAL maps)
fn RLMaterial loadMaterialDefault() @cname("LoadMaterialDefault");
// Check if a material is ready
fn bool isMaterialValid(RLMaterial material) @cname("IsMaterialValid");
// Unload material from GPU memory (VRAM)
fn void unloadMaterial(RLMaterial material) @cname("UnloadMaterial");
// Set texture for a material map type (MATERIAL_MAP_DIFFUSE, MATERIAL_MAP_SPECULAR...)
fn void setMaterialTexture(RLMaterial* material, CInt mapType, RLTexture2D texture) @cname("SetMaterialTexture");
// Set material for a mesh
fn void setModelMeshMaterial(RLModel* model, CInt meshId, CInt materialId) @cname("SetModelMeshMaterial");

// RLModel animations loading/unloading functions
// Load model animations from file
fn RLModelAnimation* loadModelAnimations(ZString fileName, CInt* animCount) @cname("LoadModelAnimations");
// Update model animation pose
fn void updateModelAnimation(RLModel model, RLModelAnimation anim, CInt frame) @cname("UpdateModelAnimation");
// Update model animation mesh bone matrices (GPU skinning)
fn void updateModelAnimationBones(RLModel model, RLModelAnimation anim, CInt frame) @cname("UpdateModelAnimationBones");
// Unload animation data
fn void unloadModelAnimation(RLModelAnimation anim) @cname("UnloadModelAnimation");
// Unload animation array data
fn void unloadModelAnimations(RLModelAnimation* animations, CUInt count) @cname("UnloadModelAnimations");
// Check model animation skeleton match
fn bool isModelAnimationValid(RLModel model, RLModelAnimation anim) @cname("IsModelAnimationValid");

// Collision detection functions
// Check collision between two spheres
fn bool checkCollisionSpheres(RLVector3 center1, float radius1, RLVector3 center2, float radius2) @cname("CheckCollisionSpheres");
// Check collision between two bounding boxes
fn bool checkCollisionBoxes(RLBoundingBox box1, RLBoundingBox box2) @cname("CheckCollisionBoxes");
// Check collision between box and sphere
fn bool checkCollisionBoxSphere(RLBoundingBox box, RLVector3 center, float radius) @cname("CheckCollisionBoxSphere");
// Get collision info between ray and sphere
fn RLRayCollision getRayCollisionSphere(RLRay ray, RLVector3 center, float radius) @cname("GetRayCollisionSphere");
// Get collision info between ray and box
fn RLRayCollision getRayCollisionBox(RLRay ray, RLBoundingBox box) @cname("GetRayCollisionBox");
// Get collision info between ray and mesh
fn RLRayCollision getRayCollisionMesh(RLRay ray, RLMesh mesh, RLMatrix transform) @cname("GetRayCollisionMesh");
// Get collision info between ray and triangle
fn RLRayCollision getRayCollisionTriangle(RLRay ray, RLVector3 p1, RLVector3 p2, RLVector3 p3) @cname("GetRayCollisionTriangle");
// Get collision info between ray and quad
fn RLRayCollision getRayCollisionQuad(RLRay ray, RLVector3 p1, RLVector3 p2, RLVector3 p3, RLVector3 p4) @cname("GetRayCollisionQuad");

//------------------------------------------------------------------------------------
// Audio Loading and Playing Functions (Module: audio)
//------------------------------------------------------------------------------------

alias AudioCallback = fn void(void* bufferdata, CUInt frames);

// Audio device management functions
// Initialize audio device and context
fn void initAudioDevice() @cname("InitAudioDevice");
// Close the audio device and context
fn void closeAudioDevice() @cname("CloseAudioDevice");
// Check if audio device has been initialized successfully
fn bool isAudioDeviceReady() @cname("IsAudioDeviceReady");
// Set master volume (listener)
fn void setMasterVolume(float volume) @cname("SetMasterVolume");
// Get master volume (listener)
fn float getMasterVolume() @cname("GetMasterVolume");

// RLWave/RLSound loading/unloading functions
// Load wave data from file
fn RLWave loadWave(ZString fileName) @cname("LoadWave");
// Load wave from memory buffer, fileType refers to extension: i.e. '.wav'
fn RLWave loadWaveFromMemory(ZString fileType, char* fileData, CInt dataSize) @cname("LoadWaveFromMemory");
// Checks if wave data is valid (data loaded and parameters)
fn bool isWaveValid(RLWave wave) @cname("IsWaveValid");
// Load sound from file
fn RLSound loadSound(ZString fileName) @cname("LoadSound");
// Load sound from wave data
fn RLSound loadSoundFromWave(RLWave wave) @cname("LoadSoundFromWave");
// Create a new sound that shares the same sample data as the source sound, does not own the sound data
fn RLSound loadSoundAlias(RLSound source) @cname("LoadSoundAlias");
//Checks if a sound is valid (data loaded and buffers initialized)
fn bool isSoundValid(RLSound sound) @cname("IsSoundValid");
// Update sound buffer with new data
fn void updateSound(RLSound sound, void* data, CInt sampleCount) @cname("UpdateSound");
// Unload wave data
fn void unloadWave(RLWave wave) @cname("UnloadWave");
// Unload sound
fn void unloadSound(RLSound sound) @cname("UnloadSound");
// Export wave data to file, returns true on success
fn bool exportWave(RLWave wave, ZString fileName) @cname("ExportWave");
// Export wave sample data to code (.h), returns true on success
fn bool exportWaveAsCode(RLWave wave, ZString fileName) @cname("ExportWaveAsCode");

// RLWave/RLSound management functions
// Play a sound
fn void playSound(RLSound sound) @cname("PlaySound");
// Stop playing a sound
fn void stopSound(RLSound sound) @cname("StopSound");
// Pause a sound
fn void pauseSound(RLSound sound) @cname("PauseSound");
// Resume a paused sound
fn void resumeSound(RLSound sound) @cname("ResumeSound");
// Get number of sounds playing in the multichannel
fn CInt getSoundsPlaying() @cname("GetSoundsPlaying");
// Check if a sound is currently playing
fn bool isSoundPlaying(RLSound sound) @cname("IsSoundPlaying");
// Set volume for a sound (1.0 is max level)
fn void setSoundVolume(RLSound sound, float volume) @cname("SetSoundVolume");
// Set pitch for a sound (1.0 is base level)
fn void setSoundPitch(RLSound sound, float pitch) @cname("SetSoundPitch");
// Set pan for a sound (0.5 is center)
fn void setSoundPan(RLSound sound, float pan) @cname("SetSoundPan");
// Copy a wave to a new wave
fn RLWave waveCopy(RLWave wave) @cname("WaveCopy");
// Crop a wave to defined samples range
fn void waveCrop(RLWave* wave, CInt initFrame, CInt finalFrame) @cname("WaveCrop");
// Convert wave data to desired format
fn void waveFormat(RLWave* wave, CInt sampleRate, CInt sampleSize, CInt channels) @cname("WaveFormat");
// Load samples data from wave as a 32bit float data array
fn float* loadWaveSamples(RLWave wave) @cname("LoadWaveSamples");
// Unload samples data loaded with LoadWaveSamples()
fn void unloadWaveSamples(float* samples) @cname("UnloadWaveSamples");

// RLMusic management functions
// Checks if a music stream is valid (context and buffers initialized)
fn bool isMusicValid(RLMusic music) @cname("IsMusicValid");
// Load music stream from file
fn RLMusic loadMusicStream(ZString fileName) @cname("LoadMusicStream");
// Load music stream from data
fn RLMusic loadMusicStreamFromMemory(ZString fileType, char* data, CInt dataSize) @cname("LoadMusicStreamFromMemory");
// Unload music stream
fn void unloadMusicStream(RLMusic music) @cname("UnloadMusicStream");
// Start music playing
fn void playMusicStream(RLMusic music) @cname("PlayMusicStream");
// Check if music is playing
fn bool isMusicStreamPlaying(RLMusic music) @cname("IsMusicStreamPlaying");
// Updates buffers for music streaming
fn void updateMusicStream(RLMusic music) @cname("UpdateMusicStream");
// Stop music playing
fn void stopMusicStream(RLMusic music) @cname("StopMusicStream");
// Pause music playing
fn void pauseMusicStream(RLMusic music) @cname("PauseMusicStream");
// Resume playing paused music
fn void resumeMusicStream(RLMusic music) @cname("ResumeMusicStream");
// Seek music to a position (in seconds)
fn void seekMusicStream(RLMusic music, float position) @cname("SeekMusicStream");
// Set volume for music (1.0 is max level)
fn void setMusicVolume(RLMusic music, float volume) @cname("SetMusicVolume");
// Set pitch for a music (1.0 is base level)
fn void setMusicPitch(RLMusic music, float pitch) @cname("SetMusicPitch");
// Set pan for a music (0.5 is center)
fn void setMusicPan(RLMusic music, float pan) @cname("SetMusicPan");
// Get music time length (in seconds)
fn float getMusicTimeLength(RLMusic music) @cname("GetMusicTimeLength");
// Get current music time played (in seconds)
fn float getMusicTimePlayed(RLMusic music) @cname("GetMusicTimePlayed");

// RLAudioStream management functions
// Load audio stream (to stream raw audio pcm data)
fn RLAudioStream loadAudioStream(CUInt sampleRate, CUInt sampleSize, CUInt channels) @cname("LoadAudioStream");
// Checks if an audio stream is valid (buffers initialized)
fn bool isAudioStreamValid(RLAudioStream stream) @cname("IsAudioStreamValid");
// Unload audio stream and free memory
fn void unloadAudioStream(RLAudioStream stream) @cname("UnloadAudioStream");
// Update audio stream buffers with data
fn void updateAudioStream(RLAudioStream stream, void* data, CInt frameCount) @cname("UpdateAudioStream");
// Check if any audio stream buffers requires refill
fn bool isAudioStreamProcessed(RLAudioStream stream) @cname("IsAudioStreamProcessed");
// Play audio stream
fn void playAudioStream(RLAudioStream stream) @cname("PlayAudioStream");
// Pause audio stream
fn void pauseAudioStream(RLAudioStream stream) @cname("PauseAudioStream");
// Resume audio stream
fn void resumeAudioStream(RLAudioStream stream) @cname("ResumeAudioStream");
// Check if audio stream is playing
fn bool isAudioStreamPlaying(RLAudioStream stream) @cname("IsAudioStreamPlaying");
// Stop audio stream
fn void stopAudioStream(RLAudioStream stream) @cname("StopAudioStream");
// Set volume for audio stream (1.0 is max level)
fn void setAudioStreamVolume(RLAudioStream stream, float volume) @cname("SetAudioStreamVolume");
// Set pitch for audio stream (1.0 is base level)
fn void setAudioStreamPitch(RLAudioStream stream, float pitch) @cname("SetAudioStreamPitch");
// Set pan for audio stream (0.5 is centered)
fn void setAudioStreamPan(RLAudioStream stream, float pan) @cname("SetAudioStreamPan");
// Default size for new audio streams
fn void setAudioStreamBufferSizeDefault(CInt size) @cname("SetAudioStreamBufferSizeDefault");
// Audio thread callback to request new data
fn void setAudioStreamCallback(RLAudioStream stream, AudioCallback processor) @cname("SetAudioStreamCallback");

// Attach audio stream processor to stream, receives the samples as 'float'
fn void attachAudioStreamProcessor(RLAudioStream stream, AudioCallback processor) @cname("AttachAudioStreamProcessor");
// Detach audio stream processor from stream
fn void detachAudioStreamProcessor(RLAudioStream stream, AudioCallback processor) @cname("DetachAudioStreamProcessor");

//  Attach audio stream processor to the entire audio pipeline, receives the samples as 'float'
fn void attachAudioMixedProcessor(AudioCallback processor) @cname("AttachAudioMixedProcessor");
// Detach audio stream processor from the entire audio pipeline
fn void detachAudioMixedProcessor(AudioCallback processor) @cname("DetachAudioMixedProcessor");


//----------------------------------------------------------------------------------
// Additional Raylib.c3 Mode helper macros
//----------------------------------------------------------------------------------

/**
 * Setup canvas (framebuffer) to start drawing, then calls [block].
 * Drawing will end after [block] has finished.
 */
macro void @drawing(;@body)
{
  beginDrawing();
  defer endDrawing();
  @body();
}

/**
 * Setup 2D mode with custom camera to start 2D Mode, then calls [block].
 * Mode2D will end after [block] has finished.
 */
macro void @mode2D(RLCamera2D camera ;@body)
{
  beginMode2D(camera);
  defer endMode2D();
  @body();
}
